--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
-            background-color: lightslategray;
+            background-color: lightgrey;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
