--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climate Track</title>
+    <title>Weather</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: grey;
+            background-color:white;
         }
 
         .container {
             max-width: 600px;
             margin: 0 auto;
+            margin-top: 30px;
             padding: 20px;
-            background-color: lightgrey;
+            background-color:skyblue;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -71,7 +72,7 @@
 </head>
 <body>
   <div class="container">
-      <h1 class="header">Climate Track</h1>
+      <h1 class="header">Weather</h1>
       <div class="form-container">
           <input type="text" id="locationInput" placeholder="Enter a location">
           <button id="searchButton">Search</button>
@@ -152,3 +153,4 @@
   </script>
 </body>
 </html>
+
