--- a/index.html
+++ b/index.html
@@ -4,71 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color:white;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            margin-top: 30px;
-            padding: 20px;
-            background-color:skyblue;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .form-container {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .form-container input[type="text"] {
-            padding: 10px;
-            width: 200px;
-            border-radius: 5px;
-            border: none;
-        }
-
-        .form-container button {
-            padding: 10px;
-            background-color: lightblue;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-        }
-
-        .climate-container {
-            text-align: center;
-        }
-
-        .temperature {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .weather-description {
-            font-size: 16px;
-        }
-
-        #map {
-            height: 400px;
-            width: 100%;
-            margin-bottom: 20px;
-            border-radius: 10px;
-        }
-    </style>
 </head>
 <body>
   <div class="container">
@@ -87,70 +24,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
-  <script>
-      var map = L.map('map').setView([0, 0], 2);
-
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
-          maxZoom: 18
-      }).addTo(map);
-
-      var marker = L.marker([0, 0]).addTo(map);
-
-      document.getElementById('searchButton').addEventListener('click', function() {
-          var locationInput = document.getElementById('locationInput');
-          var location = locationInput.value;
-          searchForLocation(location);
-      });
-
-      function searchForLocation(location) {
-          var url = 'https://nominatim.openstreetmap.org/search?format=json&limit=1&q=' + location;
-
-          fetch(url)
-              .then(response => response.json())
-              .then(data => {
-                  if (data.length > 0) {
-                      var lat = parseFloat(data[0].lat);
-                      var lon = parseFloat(data[0].lon);
-
-                      marker.setLatLng([lat, lon]);
-                      map.setView([lat, lon], 12);
-
-                      fetchClimateData(lat, lon);
-                  } else {
-                      console.log('Location not found.');
-                  }
-              })
-              .catch(error => {
-                  console.log('Error:', error);
-              });
-      }
-
-      function fetchClimateData(lat, lon) {
-          var apiKey = '9f37e5bf04625fa40b36fee3910e7866';
-          var apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${'9f37e5bf04625fa40b36fee3910e7866'}&units=metric`;
-
-          fetch(apiUrl)
-              .then(response => response.json())
-              .then(data => {
-                  var temperatureElement = document.getElementById('temperature');
-                  var weatherDescriptionElement = document.getElementById('weatherDescription');
-
-                  if (data.main && data.weather) {
-                      var temperature = data.main.temp;
-                      var weatherDescription = data.weather[0].description;
-
-                      temperatureElement.textContent = temperature + '°C';
-                      weatherDescriptionElement.textContent = weatherDescription;
-                  } else {
-                      console.log('Climate data not found.');
-                  }
-              })
-              .catch(error => {
-                  console.log('Error:', error);
-              });
-      }
-  </script>
+  <script src="app.js"></script>
 </body>
 </html>
-
