--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div class="container">
       <h1 class="header">Weather</h1>
-      <div class="form-container">
+
+      <h2>hello pratik and ganesh</h2>
+              <div class="form-container">
           <input type="text" id="locationInput" placeholder="Enter a location">
           <button id="searchButton">Search</button>
       </div>
