final commit done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-      <h1 class="header">Weather</h1>
+      <h1 class="header">WEATHER</h1>
         <div class="form-container">
           <input type="text" id="locationInput" placeholder="Enter a location">
           <button id="searchButton">Search</button>
